--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types": "supabase gen types typescript --project-id ggbnqzwbiejccwqzakaz > database.types.ts"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.4",
     "@supabase/supabase-js": "^2.38.4",
     "next": "14.0.1",
     "react": "^18",
@@ -23,6 +25,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "standard": "^17.1.0",
+    "supabase": "^1.110.1",
     "tailwindcss": "^3.3.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5"
