--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "types": "supabase gen types typescript --project-id ggbnqzwbiejccwqzakaz > database.types.ts"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@supabase/auth-helpers-nextjs": "^0.8.4",
     "@supabase/supabase-js": "^2.38.4",
+    "i18n-config": "^1.1.0",
+    "negotiator": "^0.6.3",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
