--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "i18n-config": "^1.1.0",
     "negotiator": "^0.6.3",
-    "next": "14.0.1",
+    "next": "14.0.2-canary.4",
     "react": "^18",
     "react-dom": "^18"
   },
