--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "types": "supabase gen types typescript --project-id ggbnqzwbiejccwqzakaz > database.types.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.4.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.4",
-    "@supabase/supabase-js": "^2.38.4",
-    "i18n-config": "^1.1.0",
-    "material-symbols": "^0.13.2",
-    "negotiator": "^0.6.3",
-    "next": "14.0.2-canary.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.22.4"
+    "@formatjs/intl-localematcher": "0.5.2",
+    "@supabase/auth-helpers-nextjs": "0.8.7",
+    "@supabase/supabase-js": "2.39.0",
+    "i18n-config": "1.1.0",
+    "material-symbols": "0.14.3",
+    "negotiator": "0.6.3",
+    "next": "14.0.4",
+    "next-themes": "0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@types/negotiator": "^0.6.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1",
-    "postcss": "^8",
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
     "standard": "^17.1.0",
-    "supabase": "^1.110.1",
-    "tailwindcss": "^3.3.0",
+    "supabase": "^1.123.4",
+    "tailwindcss": "^3.3.6",
     "ts-standard": "^12.0.2",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
