Update CSS, ESLint rules, and dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
         "*.tsx"
       ],
       "rules": {
-        "@typescript-eslint/no-misused-promises": "off"
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
       }
     }
   ]
