--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@supabase/auth-helpers-nextjs": "0.8.7",
     "@supabase/supabase-js": "2.39.0",
+    "@videsk/headway-sdk": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i18n-config": "1.1.0",
